--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Stoccaggio"></activity>
-        <activity android:name=".Homepage"></activity>
-        <activity android:name=".Raccolta"></activity>
-        <activity android:name=".Registrazione"></activity>
+        <activity android:name=".Stoccaggio" android:label="@string/activityStoccaggio"></activity>
+        <activity android:name=".Homepage" android:label="@string/activityHomepage"></activity>
+        <activity android:name=".Raccolta" android:label="@string/activityRaccolta"></activity>
+        <activity android:name=".Registrazione" android:label="@string/activityRegistrazione"></activity>
     </application>
 
 </manifest>
