--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".Irrigazione" android:label="@string/activityIrrigazione">
         </activity>
+        <activity android:name=".DatiCampo" android:label="@string/activityDatiCampo">
+        </activity>
     </application>
 
 </manifest>
