Added DatiCampo2 Interface

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,17 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key"/>
+
         <activity android:name=".MainActivity" android:label="@string/activityMain">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".Stoccaggio" android:label="@string/activityStoccaggio">
         </activity>
         <activity android:name=".Homepage" android:label="@string/activityHomepage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".Raccolta" android:label="@string/activityRaccolta">
         </activity>
@@ -32,6 +34,10 @@
         <activity android:name=".Irrigazione" android:label="@string/activityIrrigazione">
         </activity>
         <activity android:name=".DatiCampo" android:label="@string/activityDatiCampo">
+        </activity>
+        <activity android:name=".NuovoSolco" android:label="@string/activityDatiCampo">
+        </activity>
+        <activity android:name=".DatiCampo2" android:label="@string/activityDatiCampo">
         </activity>
     </application>
 
