--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_theme"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_theme"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -17,15 +17,14 @@
             android:value="@string/map_key"/>
 
         <activity android:name=".MainActivity" android:label="@string/activityMain">
-
-        </activity>
-        <activity android:name=".Stoccaggio" android:label="@string/activityStoccaggio">
-        </activity>
-        <activity android:name=".Homepage" android:label="@string/activityHomepage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Stoccaggio" android:label="@string/activityStoccaggio">
+        </activity>
+        <activity android:name=".Homepage" android:label="@string/activityHomepage">
         </activity>
         <activity android:name=".Raccolta" android:label="@string/activityRaccolta">
         </activity>
