--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         </activity>
         <activity android:name=".NuovoCampo" android:label="@string/activityNuovoCampo">
         </activity>
+        <activity android:name=".Irrigazione2" android:label="@string/activityIrrigazione">
+        </activity>
     </application>
 
 </manifest>
